CityService added plus some repairs